# statistics

./: .dockerignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
app/: main.py  schemas.py
app/routers/: distributions.py  samplings.py
experiments/: probability_distribution.ipynb  proposition_probability_distribution.ipynb
experiments/asymptotic_prop/: monte_carlo_integration.ipynb
experiments/probability_distribution/: one_dim_prob_dist.ipynb  prop_prob_dist.ipynb  two_dim_prob_dist.ipynb
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: page.tsx
frontend/app/distribution_relationships/: page.tsx
frontend/app/distribution_relationships/binomial-poisson/: page.tsx
frontend/app/distribution_relationships/chi2-gamma/: page.tsx
frontend/app/distribution_relationships/geometric-exp/: page.tsx
frontend/app/distribution_relationships/geometric-nbinomial/: page.tsx
frontend/app/distribution_relationships/hypergeom-binomial/: page.tsx
frontend/app/distribution_relationships/normal-t/: page.tsx
frontend/app/distributions/: page.tsx
frontend/src/components/: AppShell.tsx  ControlRow.tsx  DistributionRelationTemplate.tsx  DistributionTemplate.tsx  SamplingRelationTemplate.tsx
frontend/src/hooks/: useFetch.ts
frontend/src/types/: api.ts
frontend/src/utils/: url.ts
src/modules/: probability_distribution.py
src/my_stats/: probability_distribution.py  probability_integral_transform.py
src/my_stats/probability_distribution/: probability_integral_transform.py  two_dim_prob_dist.py
(+12 files in other folders)
