[project]
name = "statistics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.128.0",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "mypy>=1.19.1",
    "numpy>=2.2.6",
    "ruff>=0.14.13",
    "scipy>=1.15.3",
    "scipy-stubs>=1.15.3.0",
    "seaborn>=0.13.2",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "scipy-stubs>=1.15.3.0",
    "types-seaborn>=0.13.2.20251221",
]

[tool.mypy]
exclude = "experiments/.*"
strict = true
